2006-06-20  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sugar.m4 (m4_init): Merge the two m4_wrap
	calls, so that we do not care whether they are LIFO or FIFO;
	in the m4_wrap, do not check which diversion is the topmost
	one, just check that the stack is balanced at the end.
	* lib/m4sugar/m4sh.m4 (AS_INIT): We are going to change the
	base diversion forever--pop the previous diversion before
	opening the new one; consequently, remove the m4_wrap call.
	* lib/autotest/general.m4 (AT_INIT): Likewise.
	* tests/m4sugar.at: Do not use
	m4_wrap([m4_diversion_pop([..])]), for educational purposes.

2006-06-19  Paul Eggert  <eggert@cs.ucla.edu>
	and Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* NEWS: Document that m4wrap/m4_wrap might not be LIFO.
	* doc/autoconf.texi (Redefined M4 Macros): Likewise.
	Rework example of m4wrap token-pasting trouble so that it doesn't
	care whether it's LIFO or FIFO.
	Fix some "contrary to"s that are awkward in English.

2006-06-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/types.m4 (_AC_TYPE_INT): Set `$ac_cv_c_int$1_t'
	to `yes' instead of `int$1_t' if the type is found, for more
	consistent configure output (where $1 is the number of bits).
	(_AC_TYPE_UINT): Likewise for `uint$1_t'.
	Suggested by Bruno Haible.

	* lib/autoconf/types.m4 (_AC_TYPE_UNSIGNED_INT): Solaris 2.5.1
	needs _UINT8_T and _UINT64_T defines as well, to avoid clashes
	with system headers.  Report by Bruno Haible.

2006-06-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* config/config.guess, config/config.sub: Sync from upstream.

	* bin/Makefile.am (autoconf.in): Use `--melt' for autom4te,
	in order to avoid picking up an older installed frozen m4sh.m4f.
	Besides an outdated shell startup, this could have been created
	by an earlier M4 version with incompatible frozen file format.

2006-06-16  Paul Eggert  <eggert@cs.ucla.edu>

	* README: Recommend m4 1.4.4 instead of 1.4.3..
	* doc/autoconf.texi: Likewise.