@@ -1,3 +1,9 @@
+2006-06-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* bin/autom4te.in (handle_output): Do not forbid the empty
+	pattern.
+	* tests/tools.at (autoconf: the empty token): New test.
+
 2006-06-20  Stepan Kasal  <kasal@ucw.cz>
 
 	* lib/m4sugar/m4sugar.m4 (m4_init): Merge the two m4_wrap
